# well_architected_framework_rust

./: .gitignore  Cargo.toml  Makefile  README.md  csv_file.csv  samconfig.toml  template.yaml
.aws-sam/: build.toml
src/: lib.rs  model.rs  s3.rs
