[package]
name = "sam-rust-inventory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
tokio-stream = "0.1.8"
rand = "0.8.5"
async-trait = "0.1.68"
aws-sdk-dynamodb = "1.9.0"
aws-smithy-client = { version = "0.52.0", features = ["test-util"] }
lambda_http = "0.8.3"
aws-sdk-sqs = "1.9.0"
lambda_runtime = { version = "0.8.3"}
tokio = { version = "1.21.1", features = ["full"] }
aws-sdk-s3= { version = "1.11.0", features = ["rt-tokio"] }
aws_lambda_events = { version = "0.8.3", default-features = false, features = ["s3","sqs"] }
aws-smithy-http = "0.60.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
csv = "1.3.0"

[dev-dependencies]
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
http = "0.2.8"

[[bin]]
name = "process-s3-event"
path ="src/bin/lambda/process-s3-event.rs"
test = false

[[bin]]
name = "process-sqs-event"
path ="src/bin/lambda/process-sqs-event.rs"
test = false